<resources>
    <string name="app_name">LEADERBOARD</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learner_badge">Learner Badge</string>
    <string name="gads_logo">Gads Logo</string>
    <string name="project_submission">Project Submission</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="email_address">Email address</string>
    <string name="submit">Submit</string>
    <string name="submission_successful">Submission successful</string>
    <string name="submission_not_successful">Submission not successful</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="splash_screen">splash screen</string>
</resources>